objects/Delegate_Approver_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegate Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegate_Approver_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegate_Employee_ID__c</fullName>
        <formula>Delegate_Approver__r.OD_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Job_Title__c</fullName>
        <formula>Delegate_Approver__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Name__c</fullName>
        <formula>Delegate_Approver__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <formula>Support__r.Support_Requester__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Comments__c</fullName>
        <formula>Support__r.AM_Essentials_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Number__c</fullName>
        <formula>Support__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Subject__c</fullName>
        <formula>Support__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Delegate Approver Requests</relationshipLabel>
        <relationshipName>Delegate_Approver_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Employee_ID__c</fullName>
        <formula>User__r.OD_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Job_Title__c</fullName>
        <formula>User__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Delegate_Approver_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Delegate Approver Request</label>
    <nameField>
        <label>Delegate Approver Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delegate Approver Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>